# permission_manager

./: .gitignore  LICENSE  README.md  meson.build
dialog/: dbus.cpp  dbus.h  main.cpp
service/: client.cpp  client.h  dbus.cpp  dbus.h  forwarder.cpp  forwarder.h  handler.cpp  handler.h  log.h  main.cpp
src/: forwarder.cpp  forwarder.h  handler.cpp  handler.h  main.cpp
